# eFold

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  barebones.ipynb  barebones.py  hf_tutorial.ipynb  i.ipynb  model.pt  pyproject.toml  requirements.txt  ribonanza-solution.ipynb  setup.py  smooth-blaze-41.pt  sweep.yaml  test_api.ipynb  test_eFold.ipynb
bppm/: algos.py  arnie_utils.py  main.ipynb  util.py
dmsensei/: __init__.py  config.py
dmsensei/core/: __init__.py  batch.py  callbacks copy.py  callbacks.py  datamodule.py  datapoint.py  dataset.py  datatype.py  embeddings.py  listofdatapoints.py  loader.py  logger.py  metrics.py  model.py  path.py  postprocess.py  sampler.py  util.py  visualisation.py
dmsensei/huggingface/: __init__.py  download.py  env.py  path.py  upload.py
dmsensei/models/: __init__.py  cnn.py  evoformer.py  factory.py  model.py  ribonanza.py  templates.py  transformer.py  unet.py
dmsensei/models/dms/: __init__.py  evoformer.py  mlp.py  transformer.py
dmsensei/models/multi/: __init__.py  evoformer.py  transformer.py
dmsensei/models/old/: __init__.py  transformer_colin.py
dmsensei/util/: __init__.py  ribonanza.py  stack.py
efold/: __init__.py  cli.py  config.py
efold/api/: __init__.py  run.py
efold/core/: __init__.py  batch.py  callbacks.py  dataloader.py  datatype.py  embeddings.py  logger.py  metrics.py  model.py  path.py  postprocess.py  sampler.py  util.py
efold/models/: cnn.py  efold.py  factory.py  ribonanza.py  transformer.py  unet.py
efold/util/: __init__.py  format_conversion.py
lightning_logs/version_0/: events.out.tfevents.1695840608.DN2tf8mz.SUNet.35981.0
scripts/: average_weigths.py  cnn_template.py  efold_training.py  evoformer-1.py  evoformer-structure.py  evoformer-template.py  mlp-1.py  mlp-template.py  ribonanza-template.py  ribonanza.ipynb  sweep-mlp.py  sweep-transformer.py  transformer-1.py  transformer-2.py  transformer-fw.py  transformer-template.py  unet_template.py  unet_training.py
scripts/dms/: evoformer-1.py  minimal-mlp.py  mlp-1.py  mlp-sweep.py  transfo-sweep.py  transformer-1.py  transformer-2.py
testing_scripts/: batch_group.ipynb  data_end2end.ipynb
tests/: test_eFold.ipynb  test_speed_eFold.py
tests/data/PDB/: data.json
tests/data/archiveII_blast/: data.json
tests/data/lncRNA_nonFiltered/: data.json
tests/data/viral_fragments/: data.json
